Bug 461120 - Scanned page comes up blank
Summary: Scanned page comes up blank
Status: RESOLVED FIXED
Alias: None
Product: Skanpage
Classification: Applications
Component: general (other bugs)
Version First Reported In: 22.08.2
Platform: Other Linux
: VHI grave
Target Milestone: ---
Assignee: Alexander Stippich
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-10-28 16:09 UTC by John
Modified: 2023-05-16 08:51 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 23.04.1
Sentry Crash Report:


Attachments
Comparision (1.21 MB, image/png)
2023-01-06 16:39 UTC, John
Details

Note You need to log in before you can comment on or make changes to this bug.
Description John 2022-10-28 16:09:04 UTC
SUMMARY
When i try to scan a page (or multiple ones), they come up (apparently) blank

STEPS TO REPRODUCE
1. Turn on scanner (Epson Stylus SX435W connected by USB)
2. Run SkanPage (just installed with no custom settings)
3. Set the ScanMode to Gray and the resolution to 75PPP
4. Click Scan

OBSERVED RESULT
Page comes up blank

EXPECTED RESULT
Should show the document

SOFTWARE/OS VERSIONS
Operating System: KDE neon 5.26
KDE Plasma Version: 5.26.2
KDE Frameworks Version: 5.99.0
Qt Version: 5.15.6
Kernel Version: 5.15.0-52-generic (64-bit)
Graphics Platform: X11


ADDITIONAL INFORMATION
Upon investigation i believe i could figure the problem out.
I have SkanLite also installed (and Gnome's Document Scanner - hey, i have to have a plan B to do the job!).

I believe that, somehow, skanlite and skanpage share some settings because:

1. if i set skanpage to ScanMode to Color it shows the document in complete "red tone"
2. If i close skanpage and go to skanlite and Set ScanMode: Gray and Resoution to 75PPP and then go to Scanner Specific Options - i have a "Dropout" option set to "None"!
If i set it to other option and then to None again, it fixes the problem in SkanPage.
3. In SkanLite, sometimes, the colors in Advanced Options are also all set to their maximum and when changed they also fix the problem in SkanPage.
Comment 1 John 2022-11-24 10:28:35 UTC
OK... maybe what i wrote in the additional information doesn't work, after all (it did work when i reported it, however)!!!

Because i just don't seem to be able to get it working what ever i do.

I'm just trying to get my work done... It's a very frustrating situation!!!

Such a great promise and then this keeps on happening (also, i get crashes after trying to fix the situation with skanlite).

back to Gnome's Document Scanner...
Comment 2 John 2023-01-06 16:01:51 UTC
This is definitely puzzling me!

Tired of not being able to use SkanPage i made another attempt at fixing it.

Again, i went into SkanLite and noticed that in the "Advanced Options" tab the values were not the default ones.
I reset them and after closing it and getting back to SkanPage it started working just fine (not sure how long it will last, however...)
Comment 3 John 2023-01-06 16:39:54 UTC
Created attachment 155076 [details]
Comparision

Well... The fix didn't last (Just as i was guessing).
Here's a comparison of what i'm getting as attached

(i was able to, again, fix it after this scans, by doing the same steps mentioned in my last post)
Comment 4 Bug Janitor Service 2023-04-23 02:01:57 UTC
A possibly relevant merge request was started @ https://invent.kde.org/utilities/skanpage/-/merge_requests/45
Comment 5 Nate Graham 2023-04-24 16:01:40 UTC
Git commit cafd9567e21bd78825914a8b19262f3969bef226 by Nate Graham, on behalf of John Doe.
Committed on 24/04/2023 at 15:59.
Pushed by ngraham into branch 'release/23.04'.

Restore configs for gamma options

The skanpagestaterc file has/had incorrect gamma values taken
directly from KSaneCore, that issue, for new installations,
should be fixed on its 23.08 release, I think.

This just makes Skanpage ignore those values, since they
are not yet adjustable from the interface
FIXED-IN: 23.04.1

M  +7    -0    src/Skanpage.cpp

https://invent.kde.org/utilities/skanpage/commit/cafd9567e21bd78825914a8b19262f3969bef226
Comment 6 John 2023-04-26 11:23:37 UTC
(In reply to Nate Graham from comment #5)
> Git commit cafd9567e21bd78825914a8b19262f3969bef226 by Nate Graham, on
> behalf of John Doe.

> FIXED-IN: 23.04.1

Really HIGH HOPES on this fix!!!

I would REALLY like to use SkanPage full time ( and be able to remove skanlite, Gnome's scan and others i've tried )!!!

Thank you Nate & John Doe!
Comment 7 John 2023-05-16 08:51:34 UTC
I can confirm that (so far) it's working like a charm!

Thank you all involved :)