Restore configs for gamma options

The skanpagestaterc file has/had incorrect gamma values taken
directly from KSaneCore, that issue, for new installations,
should be fixed on its 23.08 release, I think.

This just makes Skanpage ignore those values, since they
are not yet adjustable from the interface

BUG: 461120
FIXED-IN: 23.04.1